@@ -507,3 +507,5 @@ SpecTcl 3.2-pre1 starts.
                to the distro.
 
   Oct 05, 2006 Xamine- add support for entering fitlines.
+  Oct 09, 2006 GUI - Bugzilla 207 - Increase the sophistication used
+               by SpecTcl's gui to located spectcldaq.
